infra/k8s/posts-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: posts-srv
spec:
  type: NodePort
  selector:
    app: posts
  ports:
    - name: posts
      protocol: TCP
      port: 4000 # Exposed port to outside
      targetPort: 4000 # Internal port to direct the outside traffic. (i.e : App exported port.)
