infra/k8s/query-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: query
  template:
    metadata:
      labels:
        app: query
    spec:
      containers:
        - name: query
          image: chamika/query # We can either put query:latest or keep blank, If blank K8 will always look for latest image in local or then in docker hub.
---
apiVersion: v1
kind: Service
metadata:
  name: query-srv
spec:
  type: ClusterIP # Since K8 default service type is "ClusterIP", you don't need to specify the type specifically, you can remove this line if you need.
  selector:
    app: query
  ports:
    - name: query
      protocol: TCP
      port: 4002 # Exposed port to outside
      targetPort: 4002 # Internal port to direct the outside traffic. (i.e : App exported port.)
